--- a/Assets/css/news.css
+++ b/Assets/css/news.css
@@ -922,7 +922,7 @@ header.news-detail-header p {
         background: #FFFFFF 0% 0% no-repeat padding-box;
         border: 1px solid #DEDEDE;
         border-radius: 5px;
-        padding: 47px 20px 0px 20px !important
+        padding: 47px 20px !important
     }
 
     .add-comment .form-control {
@@ -986,7 +986,7 @@ article.mb-5 {
 
 .more-comments {
     color: #9D0D71;
-    font-size: 12pt;
+    font-size: 16px;
     font-weight: 500;
 }
 
