--- a/AGI.Corp.Intranet.Custom.Branding/src/extensions/agiIntranetCustomBranding/components/IntranetHeader/IntranetHeader.module.scss
+++ b/AGI.Corp.Intranet.Custom.Branding/src/extensions/agiIntranetCustomBranding/components/IntranetHeader/IntranetHeader.module.scss
@@ -1,8 +1,9 @@
 @import '~office-ui-fabric-react/dist/sass/References.scss';
 
 .intranetHeader {
-  margin-top: 80px;
-  
+  margin-top: 0px;
+  background-color: #EFEFEF;
+
   .container {
     max-width: 700px;
     margin: 0px auto;
@@ -53,7 +54,7 @@
     // Basic Button
     outline: transparent;
     position: relative;
-    font-family: "Segoe UI WestEuropean","Segoe UI",-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
+    font-family: "Segoe UI WestEuropean", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     font-size: $ms-font-size-m;
     font-weight: $ms-font-weight-regular;
