--- a/Assets/css/careers.css
+++ b/Assets/css/careers.css
@@ -38,6 +38,7 @@
 	font-size: 26px;
 	color: #000;
 	margin-bottom: 30px;
+	font-family: 'Gill Sans' !important;
 }
 
 .side-by-side-section img {
@@ -102,6 +103,8 @@
 	padding-bottom: 30px;
 	padding-left: 5px;
 	padding-right: 5px;
+	display: grid;
+	align-items: end;
 }
 
 .main-content .content-wrapper .card.job-opening-card .card-title {
