--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1277,6 +1277,20 @@ nav.navbar.topnav-menu {
     width: 80%;
 }
 
+@media (max-width:1440px) {
+    .latest-news-section .carousel-caption p {
+        font-size: 28px;
+        line-height: 1.2em;
+    }
+}
+
+@media (max-width:1366px) {
+    .latest-news-section .carousel-caption p {
+        font-size: 22px;
+        line-height: 1.1em;
+    }
+}
+
 @media (max-width:991px) {
     .latest-news-section .carousel-caption p {
         /* font: normal 20px/21px Gill Sans; */
@@ -2725,7 +2739,7 @@ aside.sidebar form.search-bar {
 .sidebar-menu .nav .nav-item .nav-link {
     font-size: 20px;
     font-weight: 500;
-    padding: 15px 0;
+    padding: 15px;
     color: #666666;
     border-bottom: 1px solid #e5e5e5;
     fill: currentColor;
@@ -3857,7 +3871,7 @@ div[data-automationid="ShyHeader"] {
 .contact-section-form .form-control {
     border: none;
     border-bottom: 1px solid #D9D9E4;
-    padding: 0.375rem 0px;
+    padding: 0.375rem 15px !important;
     font: 18px/31px Gill Sans;
     letter-spacing: 0px;
     color: #300B55;
@@ -4165,6 +4179,7 @@ form.newsletter-form #emailErrorMsg {
     .user-dropdown.show {
         width: 360px;
         right: 0;
+        z-index: 999999;
         left: inherit !important;
     }
 }
@@ -4758,7 +4773,7 @@ ul.pagination {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 1;
+    z-index: 9999999;
 }
 
 
@@ -4781,9 +4796,9 @@ ul.pagination {
     color: #fff;
 }
 
-@media (max-width:991px) {
+/* @media (max-width:991px) {
     transform: scale(0.7);
-}
+} */
 
 
 .chatbox-wrapper .chatbox {
@@ -4895,7 +4910,7 @@ ul.pagination {
 .user-dropdown.dropdown .dropdown-toggle::after {
     content: '';
     display: block;
-    background: url('images/icon-caret-dropdown.svg');
+    background: url('../images/icon-caret-dropdown.svg');
     width: 18px;
     height: 18px;
     border: 0;
@@ -4976,11 +4991,55 @@ ul.pagination {
     border-radius: 100%;
     /* padding-top: 8px; */
     height: 50px;
-    width: auto;
+    width: 50px;
+    position: absolute;
+    left: 6px;
+    top: -6px;
+    margin: 0 auto;
     color: #fff;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+@media (max-width:1660px) {
+    .home-page .calendar .DayPicker .date-wrap {
+        left: 0px;
+    }
+}
+
+@media (max-width:1200px) {
+    .home-page .calendar .DayPicker .date-wrap {
+        top: 18px;
+        left: 35px;
+    }
+}
+
+@media (max-width:1100px) {
+    .home-page .calendar .DayPicker .date-wrap {
+        top: 0px;
+        left: 35px;
+    }
+}
+
+@media (max-width:991px) {
+    .home-page .calendar .DayPicker .date-wrap {
+        top: 10px;
+        left: 18px;
+    }
+}
+
+@media (max-width:991px) {
+    .home-page .calendar .DayPicker .date-wrap {
+        top: 5px;
+        left: 5px;
+    }
+}
+
+@media (max-width:576px) {
+    .home-page .calender .DayPicker .date-wrap {
+        left: -6px;
+    }
 }
 
 .home-page .calendar .DayPicker .date-wrap span {
@@ -5001,8 +5060,8 @@ ul.pagination {
 
 .employee-offer-section .carousel-item img.w-100,
 .social-media-section .carousel-item img.w-100 {
-    min-height: 28em;
-    max-height: 28em;
+    /* min-height:28em;
+    max-height:28em; */
     object-fit: cover;
     object-position: center center;
 }
@@ -5025,8 +5084,12 @@ ul.pagination {
 }
 
 .filter-section .form-select select {
-    width: 100%;
+    width: calc(100% - 45px);
     max-width: 350px;
+}
+
+.team-content .team-subtitle {
+    word-break: break-word;
 }
 
 .filter-section .form-check,
@@ -5044,7 +5107,7 @@ ul.pagination {
 }
 
 .tab-header .filter-section .form-select select {
-    width: 100% !important;
+    width: calc(100% - 45px) !important;
 }
 
 .home-page .calendar .eventDetail {
@@ -5076,7 +5139,7 @@ ul.pagination {
 }
 
 .header-wrapper.slim-header .main-nav {
-    height: 42px;
+    height: 50px;
     /* overflow: hidden; */
     display: flex;
     align-items: center;
@@ -5153,13 +5216,18 @@ ul.pagination {
     width: 100vw;
 }
 
-.main-content.contact-us-wrappern {
-    margin-top: 0px !important;
+.main-content.contact-us-wrapper {
+    margin-bottom: 0px !important;
     background: none !important;
 }
 
+.main-content.contact-us-wrapper .map-section {
+    margin-bottom: 0px !important;
+    padding-bottom: 0px !important;
+}
+
 .map-section iframe {
-    filter: grayscale(100%);
+    /* filter: grayscale(100%); */
 }
 
 .chatbox.showChatBox {
@@ -5185,6 +5253,120 @@ ul.pagination {
 
 .leadership-carousel .team-card {
     cursor: inherit !important;
+}
+
+.contact-us-wrapper .contact-section-main {
+    margin-bottom: 50px;
+}
+
+.contact-form .row {
+    align-items: flex-end;
+}
+
+.contact-section-form .form-control {
+    border-bottom: 1px solid #D9D9E4 !important;
+}
+
+.contact-section-form .form-control:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+.comment-wrapper .comment img {
+    object-fit: cover;
+}
+
+.contact-details-wrapper.border-end .row.mb-5 {
+    position: relative;
+}
+
+#newsTop .form-select.custom-select.w-100 select {
+    width: calc(100% - 45px);
+}
+
+.replies .comment {
+    border-bottom: none !important;
+}
+
+.contact-details-wrapper.border-end .row.mb-5::after {
+    content: '';
+    height: 1px;
+    width: calc(100% - 30px);
+    background: #dee2e6;
+    position: absolute;
+    bottom: -23px;
+    left: 0;
+}
+
+.contact-details-wrapper.border-end .row.mb-5:last-child::after {
+    background: none;
+}
+
+.contact-section-form .section-title {
+    font-family: Gill Sans;
+}
+
+#businessBannerCarousel .carousel-control-prev,
+#businessBannerCarousel .carousel-control-next {
+    max-height: 32px !important;
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
+
+#carouselExampleCaptions2 .carousel-item .announcement-title {
+    transition: all 0.4s;
+}
+
+#carouselExampleCaptions2 .carousel-item .d-flex:hover .announcement-title {
+    color: #9D0D71;
+}
+
+.announcement-section .col-12.col-md-6.mb-4 {
+    margin-bottom: 0px !important;
+}
+
+.team-content .view-profile {
+    padding-left: 0px !important;
+    margin: 0 auto;
+    display: block;
+}
+
+@media (max-width:768px) {
+    .announcement-section .col-12.col-md-6.mb-4 {
+        margin-bottom: 15px !important;
+    }
+
+    .announcement-date {
+        margin-bottom: 5px !important;
+    }
+
+    .announcement-title {
+        margin-bottom: 5px !important;
+    }
+}
+
+@media (max-width:991px) {
+    .main-header-section .row {
+        display: block;
+    }
+
+    .main-header-section .row .heading-section,
+    .main-header-section .row .filter-section {
+        width: 100%;
+        text-align: center !important;
+    }
+
+    .contact-details-wrapper.border-end .row.mb-5::after {
+        content: none;
+    }
+
+    .contact-details-wrapper.border-end {
+        border-right: none !important;
+    }
+
+    .filter-section .col-8 {
+        width: 100% !important;
+    }
 }
 
 .fb-page.desktop {
@@ -5214,6 +5396,11 @@ ul.pagination {
 @media (max-width: 991px) {
     #myApps .app-wrapper .carousel-item {
         text-align: center;
+    }
+
+    .filter-section .col-4 {
+        width: auto !important;
+        display: inline-flex !important;
     }
 
     .home-page .app-wrapper h5 {
@@ -5276,9 +5463,3 @@ ul.pagination {
         max-width: 1600px !important;
     }
 }
-
-/* @media (min-width: 1200px){
-    .container {
-        max-width: 1310px;
-    }
-} */
