--- a/Assets/css/home.css
+++ b/Assets/css/home.css
@@ -567,7 +567,7 @@ transition: all 0.15s ease-in-out;
 .user-dropdown.dropdown .dropdown-toggle::after {
     content: '';
     display: block;
-    background: url('images/icon-caret-dropdown.svg');
+    background: url('../images/icon-caret-dropdown.svg');
     width: 18px;
     height: 18px;
     border: 0;
@@ -957,7 +957,7 @@ input[type="radio"]:checked+label::after {
     /* border: 2px solid #9D0D71; */
 }
 
-.DayPicker-Day--event:not(.DayPicker-Day--outside):after {
+/* .DayPicker-Day--event:not(.DayPicker-Day--outside):after {
     content: '';
     display: inline-block;
     width: 5px;
@@ -971,11 +971,11 @@ input[type="radio"]:checked+label::after {
     left: 45%;
     transform: translate(0px, 0px);
 
-}
+} */
 
 .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
     position: relative;
-    /* color: #ffffff; */
+    color: #9D0D71;
     background: none;
     /* border: 2px solid #9D0D71; */
 }
@@ -987,15 +987,20 @@ input[type="radio"]:checked+label::after {
 }
 
 .datebox.Event {
-    background-color: #036ef8;
+    background-color: #c40d26;
 }
 
 .datebox.Holiday {
     background-color: #0DC49A;
 }
 
+.datebox.Announcement {
+    background-color: #036ef8;
+}
+
 .datebox.Holiday,
-.datebox.Event {
+.datebox.Event,
+.datebox.Announcement {
     display: inline-block;
     text-align: center;
     line-height: 1;
@@ -1120,6 +1125,39 @@ input[type="radio"]:checked+label::after {
     background: #0DC49A;
 }
 
+.legend span:nth-child(3):after {
+    background: #036ef8;
+}
+
+.legend span:nth-child(4):after {
+    background: #c40d26;
+}
+
+.DayPicker-Day>.date-container>span {
+    width: 5px;
+    height: 5px;
+    -moz-border-radius: 7.5px;
+    -webkit-border-radius: 7.5px;
+    border-radius: 7.5px;
+    position: absolute;
+    bottom: 3px;
+    left: 35%;
+}
+
+.DayPicker-Day--event .event {
+    background-color: #c40d26;
+}
+
+.DayPicker-Day--holiday .holiday {
+    background-color: #0DC49A;
+    left: 47% !important;
+}
+
+.DayPicker-Day--announcement .announcement {
+    background-color: #036ef8;
+    left: 60% !important;
+}
+
 /* Date Picker End*/
 
 /* Additional Styles */
@@ -1225,3 +1263,27 @@ input[type="radio"]:checked+label::after {
 .snap-share-section .carousel-inner .carousel-item {
     cursor: inherit !important;
 }
+
+/* disabling the flickering event when clicking on the card header start*/
+@media (min-width:992px) {
+    [data-bs-target="#employeeOffer"] {
+        pointer-events: none;
+    }
+
+    .employee-offer-section .card-header div.d-flex {
+        position: initial;
+        z-index: 999;
+        pointer-events: all;
+
+    }
+
+    [data-bs-target="#socialOffer"] {
+        pointer-events: none;
+    }
+
+    [data-bs-target="#survey"] {
+        pointer-events: none;
+    }
+}
+
+/* disabling the flickering event when clicking on the card header end*/
