--- a/AGI.Corp.Intranet.Gallery.Library.Script/src/webparts/agiIntranetGalleryLibraryScript/css/style.css
+++ b/AGI.Corp.Intranet.Gallery.Library.Script/src/webparts/agiIntranetGalleryLibraryScript/css/style.css
@@ -7,6 +7,6 @@
     margin-bottom: 20px;
 }
 
-[data-automation-id="webPartHeader"] {
+[data-automation-id="listViewWebPartSeeAll"] {
     display: none;
 }
