--- a/Assets/css/gallery.css
+++ b/Assets/css/gallery.css
@@ -1,130 +1,131 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css");
+
 .imgOverlay {
-    box-shadow: 0 25.6px 57.6px 0 rgb(0 0 0 / 22%), 0 4.8px 14.4px 0 rgb(0 0 0 / 18%);
-    pointer-events: auto;
-    position: fixed;
-    z-index: 111;
-    padding-top: 50px;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden auto;
-    inset: 0;
-    width: 100%;
-    animation-name: css-0, css-8;
-    animation-duration: .367s;
-    animation-timing-function: cubic-bezier(.1, .9, .2, 1);
-    animation-fill-mode: both;
-    background-color: rgba(0, 0, 0, .85) !important;
-    top: 0;
+  box-shadow: 0 25.6px 57.6px 0 rgb(0 0 0 / 22%), 0 4.8px 14.4px 0 rgb(0 0 0 / 18%);
+  pointer-events: auto;
+  position: fixed;
+  z-index: 111;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden auto;
+  inset: 0;
+  width: 100%;
+  animation-name: css-0, css-8;
+  animation-duration: .367s;
+  animation-timing-function: cubic-bezier(.1, .9, .2, 1);
+  animation-fill-mode: both;
+  background-color: rgba(0, 0, 0, .85) !important;
+  top: 0;
 }
 
 
 
 .header i {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    z-index: 10;
-    cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  z-index: 10;
+  cursor: pointer;
 }
 
 
 
 .imgOverlay i {
-    color: #fff;
-    cursor: pointer;
-    font-size : 30px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 30px;
 }
 
 
 
 .imagePreview {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80%;
 }
 
 
 
 .arrowContainer {
-    font-size: 17px;
-    font-weight: 300;
-    padding: 0;
-    border: 0;
-    background: 0 0;
-    cursor: pointer;
-    color: #ffffff;
-    min-width: 20px;
-    margin-left: 0;
-    opacity: .6;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: all .3s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    left: 20px;
+  font-size: 17px;
+  font-weight: 300;
+  padding: 0;
+  border: 0;
+  background: 0 0;
+  cursor: pointer;
+  color: #ffffff;
+  min-width: 20px;
+  margin-left: 0;
+  opacity: .6;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: all .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 20px;
 }
 
-.imgOverlay .arrowContainer{
-        z-index: 1;
+.imgOverlay .arrowContainer {
+  z-index: 1;
 }
 
 
 
 .arrowContainer i {
-    line-height: 40px;
-    background-color: #000000;
-    height: 40px;
-    width: 40px;
-    text-align: center;
-    border-radius :50%;
-    display : flex;
-    justify-content : center;
-    align-items : center;
-    font-size : 25px;
-    border: 2px solid #fff;
+  line-height: 40px;
+  background-color: #000000;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  border: 2px solid #fff;
 }
 
 
 
 .arrowContainer:last-child {
-    right: 20px;
-    left: inherit;
+  right: 20px;
+  left: inherit;
 }
 
 
 
 .img-wrapper {
-    height: calc(100% - 60px);
-    width: 90%;
-    align-content: center;
-    margin: 30px auto;
+  height: calc(100% - 60px);
+  width: 90%;
+  align-content: center;
+  margin: 30px auto;
 }
 
 
 
 .img-container {
-    height: 100%;
-    margin: auto;
-    position: relative;
+  height: 100%;
+  margin: auto;
+  position: relative;
 }
 
 
 
 .img-wrapper img {
-    max-height: 100%;
-    max-width: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .gallery-item {
@@ -151,6 +152,8 @@
 
 .gallery-item .gallery-item--img img {
   width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 
@@ -158,11 +161,11 @@
 .gallery-item .gallery-item--text {
   position: absolute;
   bottom: 0;
-  background: rgba(0,0,0,.6);
+  background: rgba(0, 0, 0, .6);
   padding: 10px 9px 16px 71px;
   transition: .5s ease;
   width: 100%;
-  min-height : 80px;
+  min-height: 80px;
   display: flex;
   align-content: flex-start;
   justify-content: center;
@@ -173,6 +176,7 @@
   background-color: rgb(87, 11, 94, .8);
   transition: .5s ease;
 }
+
 .gallery-item .gallery-item--text p {
   font-size: 20px;
   line-height: normal;
@@ -189,89 +193,92 @@
 
 
 .gallery-item.video-gallery-item .gallery-item--img:before {
-    content: '';
-    background: rgba(0,0,0,.3);
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
+  content: '';
+  background: rgba(0, 0, 0, .3);
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
 }
 
 
 
 .gallery-item.video-gallery-item .gallery-item--button {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
 
 .gallery-item.video-gallery-item .gallery-item--button button {
-    border: 0;
-    background: transparent;
+  border: 0;
+  background: transparent;
 }
 
 
 
 .gallery-item.video-gallery-item .gallery-item--button button img {
-    width: 65px;
+  width: 65px;
 }
 
 
 .gallery-item .gallery-item--text:before {
-    content: '';
-    width: 31px;
-    height: 27px;
-    display: block;
-    background: url(../Icons/icon-images-white.svg) no-repeat center; 
-    position: absolute;
-    left: 25px;
-    top: 50%;
-    transform: translate(0, -50%);
+  content: '';
+  width: 31px;
+  height: 27px;
+  display: block;
+  background: url(../Icons/icon-images-white.svg) no-repeat center;
+  position: absolute;
+  left: 25px;
+  top: 50%;
+  transform: translate(0, -50%);
 }
 
-.video-container video{
+.video-container video {
   width: 70%;
 }
+
 .video-gallery-item .gallery-item--img img {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
 }
 
 .tab-header .form-select {
-    border: none;
-    background-image: none;
-    padding: 0px;
+  border: none;
+  background-image: none;
+  padding: 0px;
 }
 
 
 
 .tab-header .form-select select {
-    border-radius: 9px;
-    background-color: #E0E0E0;
-    border-color: #E0E0E0;
-    color: #000;
-    font-family: 'Gill Sans' !important;
-    padding: 10px 10px;
-    width: 46%;
+  border-radius: 9px;
+  background-color: #E0E0E0;
+  border-color: #E0E0E0;
+  color: #000;
+  font-family: 'Gill Sans' !important;
+  padding: 10px 10px;
+  width: 46%;
 }
 
 img.gallery-item--img {
-    border-radius: 5px;
+  border-radius: 5px;
 }
+
 .imagePreviewCaption {
   color: #fff;
   max-width: 50%;
   margin-top: 30px;
   font-family: 'Gill Sans';
 }
+
 .imagePreviewCaption h2 {
   font-size: 24px;
   margin-bottom: 10px;
@@ -296,61 +303,65 @@ img.gallery-item--img {
   padding: 3px 10px 3px 20px;
   font: normal normal medium 34px/41px Gill Sans;
 }
-.imagePreviewCaption ul li .userName{
-    padding-right:25px;
+
+.imagePreviewCaption ul li .userName {
+  padding-right: 25px;
 }
-.imagePreviewCaption ul li span{
-    font-weight:300;
+
+.imagePreviewCaption ul li span {
+  font-weight: 300;
 }
-.imagePreviewCaption ul li .createdDate span{
-    padding-right:4px;
+
+.imagePreviewCaption ul li .createdDate span {
+  padding-right: 4px;
 }
+
 .imagePreviewCaption ul li i {
   position: absolute;
   left: 0;
   top: 0;
   line-height: 0;
-    vertical-align: middle;
-    margin-right: 5px;
-    margin-top: 5px;
-    width: 13px;
-    height: 16px
+  vertical-align: middle;
+  margin-right: 5px;
+  margin-top: 5px;
+  width: 13px;
+  height: 16px
 }
 
 .imagePreviewCaption ul li i img {
   height: 16px;
 }
 
-.video-wrapper{
-    height: calc(100% - 60px);
-    width: 90%;
-    align-content: center;
-    margin: 30px auto;
+.video-wrapper {
+  height: calc(100% - 60px);
+  width: 90%;
+  align-content: center;
+  margin: 30px auto;
 }
 
-@media (max-width: 767px){
-		.tab-header .form-select select{
-				background-color: #FFF;
-				border-color: #FFF;
-				width: 100%;
-		}
-		
-		.tab-header .nav.nav-tabs .nav-link{
-				width:100%;
-				justify-content: start;
-				margin-top:10px;
-		}
-		
-		.tab-header .nav .nav-item{
-			width: 100%;
-		}
-		
-		.tab-header .filter-section{
-			margin-top:20px;
-		}
+@media (max-width: 767px) {
+  .tab-header .form-select select {
+    background-color: #FFF;
+    border-color: #FFF;
+    width: 100%;
+  }
 
-    .videoPreview {
-	    height: 100%;
+  .tab-header .nav.nav-tabs .nav-link {
+    width: 100%;
+    justify-content: start;
+    margin-top: 10px;
+  }
+
+  .tab-header .nav .nav-item {
+    width: 100%;
+  }
+
+  .tab-header .filter-section {
+    margin-top: 20px;
+  }
+
+  .videoPreview {
+    height: 100%;
   }
 
   .videoPreview .video-wrapper {
@@ -365,13 +376,14 @@ img.gallery-item--img {
   .video-container video {
     width: 90%;
   }
-   .imagePreviewCaption {
-            color: #fff;
-            max-width: 100%;
-            text-align: left;
-            width: 90%;
-        }
-  
+
+  .imagePreviewCaption {
+    color: #fff;
+    max-width: 100%;
+    text-align: left;
+    width: 90%;
+  }
+
 }
 
 
@@ -411,8 +423,8 @@ img.gallery-item--img {
 
 .pagination li {
   cursor: pointer;
-  width: 30px ;
-  height: 30px ;
+  width: 30px;
+  height: 30px;
   font-size: 16px;
   font-family: 'Gill Sans' !important;
   border: none;
@@ -560,4 +572,10 @@ ul.pagination {
 .navButtonFirst,
 .navButtonLast {
   display: none !important;
+}
+
+
+.galleryList .gallery-item .gallery-item--img img {
+  height: 300px;
+  object-fit: cover;
 }
