--- a/Assets/css/interim.css
+++ b/Assets/css/interim.css
@@ -243,3 +243,63 @@
 				line-height: 28px;
 			}
 		}
+
+
+
+		.about-details article.wrapper {
+			background: #FFF;
+			padding: 50px;
+			font-family: 'Gill Sans';
+			border: 1px solid #DEDEDE;
+			border-radius: 5px;
+		}
+
+
+		.about-details section.detail-text h6 {
+			color: #750D67;
+			font-size: 20px;
+			margin: 20px 0px;
+		}
+
+		.video {
+			width: 100%;
+		}
+
+		.video-section {
+			position: relative;
+		}
+
+		.playButton {
+			border-radius: 90px;
+			border: 5px solid #fff;
+			height: 100px;
+			position: absolute;
+			width: 100px;
+			margin: auto;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			cursor: pointer;
+		}
+
+		.playButton:before {
+			content: "";
+			display: block;
+			width: 0;
+			height: 0;
+			border-style: solid;
+			border-width: 25px 0 25px 50px;
+			border-color: transparent transparent transparent #fff;
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: -10px;
+			bottom: 0;
+			margin: auto;
+		}
+
+		#business-details-banner-CarouselControls .videoWrapper {
+			height: 490px;
+			object-fit: cover;
+		}
