--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -60,7 +60,7 @@ div[class^="ExternalClass"] div,
 div[class^="ExternalClass"] span,
 div[class^="ExternalClass"] p,
 div[class^="ExternalClass"] b {
-    font-size: 16px !important;
+    font-size: 16px;
     font-family: 'Gill Sans' !important;
     line-height: 24px
 }
@@ -1678,6 +1678,10 @@ nav.navbar.topnav-menu {
 
 .employee-offer-section .carousel-item:hover .carousel-caption {
     opacity: 1;
+    display: block;
+    position: absolute;
+    bottom: -55%;
+    top: auto;
 }
 
 .employee-offer-section .carousel-caption {
@@ -2290,6 +2294,7 @@ input[type="radio"]:checked+label::after {
 .extra-navs {
     background: #fff;
     position: relative;
+    box-shadow: 0 0px 10px #00000029;
 }
 
 
@@ -2573,6 +2578,7 @@ input[type="radio"]:checked+label::after {
     color: #9D0E71;
     font-size: 20px;
     font-weight: 500;
+    font-family: 'Gill Sans';
 }
 
 .tab-header .nav .nav-item .nav-link i {
@@ -2812,6 +2818,7 @@ aside.sidebar form.search-bar {
     line-height: 14px;
     font-size: 14px;
     vertical-align: middle;
+    font-family: Gill Sans;
 }
 
 .news-details span i {
@@ -3095,6 +3102,7 @@ aside.sidebar form.search-bar {
 .vision-img-wrapper .vision-content h3 {
     font-size: 24px;
     margin-bottom: 20px;
+    font-family: 'Gill Sans'
 }
 
 .vision-img-wrapper .vision-content p {
@@ -3411,12 +3419,12 @@ aside.sidebar form.search-bar {
     }
 
     .our-purpose-section {
-        border-right: 1px solid #DFDFE1;
+        border-right: none;
     }
 
-    .about-content {
+    /* .about-content {
         padding: 50px;
-    }
+    }*/
 
     .leadership-section .leadership-content {
         overflow: hidden;
@@ -3680,7 +3688,7 @@ aside.sidebar form.search-bar {
     div[class^="ExternalClass"] span,
     div[class^="ExternalClass"] p,
     div [class^="ExternalClass"] b {
-        font-size: 14px !important;
+        font-size: 14px;
         font-family: 'Gill Sans' !important;
         line-height: 22px;
     }
@@ -4416,6 +4424,12 @@ form.newsletter-form #emailErrorMsg {
     font-family: 'Gill Sans';
 }
 
+/* .btn-Agree{
+    position: absolute;
+    top: 280px;
+    right: 20px;
+} */
+
 .contact-section-form .form-control:disabled,
 .contact-section-form .form-control[readonly] {
     padding: 10px;
@@ -4990,16 +5004,17 @@ ul.pagination {
     background: #800D69;
     border-radius: 100%;
     /* padding-top: 8px; */
-    height: 50px;
-    width: 50px;
-    position: absolute;
+    height: 30px;
+    width: 30px;
+    /*position: absolute;
     left: 6px;
-    top: -6px;
+    top: -6px;*/
     margin: 0 auto;
     color: #fff;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-top: 0px;
 }
 
 @media (max-width:1660px) {
@@ -5475,4 +5490,289 @@ ul.pagination {
     margin: 15px 0;
     font-weight: 500;
     font-size: 1rem;
+    text-decoration: none;
+
 }
+
+.company-event a.add-to-calendar {
+    margin: 0px !important;
+}
+
+
+
+
+/* featured section starts*/
+
+.featured-section {
+    padding: 70px 0px 0px;
+    margin-top: 0px !important;
+}
+
+.featured-title {
+    font-weight: 600;
+}
+
+.featured-title span i img {
+    margin-top: -9px;
+    margin-right: 10px;
+    width: 22px;
+    height: 22px;
+}
+
+.badge-label {
+    background: #FFF;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 3px 10px;
+    display: inline-block;
+    box-shadow: 0px 8px 6px #00000029;
+    border-radius: 5px;
+}
+
+.badge-label span i img {
+    margin-right: 5px;
+    margin-top: -7px;
+    width: 14px;
+    height: 14px;
+}
+
+.badge-label span.badge-txt {
+    font-family: 'Gill Sans';
+    font-size: 13px;
+    color: #000;
+    font-weight: 600;
+}
+
+/*.extra-navs .row{
+	border-bottom:1px solid #ddd;
+}*/
+
+@media (min-width: 1280px) and (max-width: 1366px) {
+    .featured-title {
+        font-size: 1.5rem;
+    }
+}
+
+
+@media (min-width: 1440px) {
+    .featured-title {
+        font-size: 1.75rem;
+    }
+}
+
+
+#featuredCarousel {
+    padding: 0px;
+}
+
+.featured-carousel .carousel-control-next-icon {
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 -2.292l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+    background-color: #9D0E71;
+    border-radius: 100px;
+    padding: 10px;
+    background-size: 50% 50%;
+}
+
+.featured-carousel .carousel-control-prev-icon {
+    background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e);
+    background-color: #9D0E71;
+    border-radius: 100px;
+    padding: 10px;
+    background-size: 50% 50%;
+}
+
+.featured-carousel .carousel-control-prev {
+    left: 0;
+    top: -50%;
+}
+
+.featured-carousel .carousel-control-next {
+    right: 0;
+    top: -50%;
+}
+
+@media (min-width: 768px) {
+    .featured-carousel .carousel-inner {
+        display: flex;
+    }
+
+    .featured-carousel .carousel-item {
+        margin-right: 10px;
+        flex: 0 0 25%;
+        display: block !important;
+    }
+
+
+    .featured-carousel .col-md-3 {
+        flex: auto;
+        width: 90%;
+    }
+
+    .featured-carousel .carousel-control-prev,
+    .featured-carousel .carousel-control-next {
+        display: none;
+    }
+}
+
+@media (max-width: 767px) {
+    .featured-carousel {
+        padding: 0px 20px;
+    }
+
+    .featured-section .title-wrapper {
+        padding: 0px 20px;
+    }
+}
+
+
+.featured-carousel .card-body a.news-read-more {
+    text-decoration: none;
+}
+
+.featured-section .main-header-section h3 {
+    letter-spacing: 0px;
+    color: #666666;
+    font-family: 'Gill Sans';
+    padding: 0px 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 40px;
+    font-size: 20px;
+}
+
+.featured-carousel .card-title {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.4;
+    font-family: 'Gill Sans';
+    font-weight: 600;
+}
+
+.featured-carousel .card-text {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: 'Gill Sans';
+}
+
+.featured-carousel p i {
+    line-height: 0;
+    vertical-align: middle;
+    width: 11px;
+    height: 11px;
+    margin-right: 5px;
+}
+
+
+.featured-carousel p i img {
+    margin-top: -9px;
+    width: 13px;
+    height: 16px;
+}
+
+
+.blog-featured-section .featured-carousel .card-body a {
+    text-decoration: none;
+    color: #000;
+
+}
+
+.blog-featured-section .featured-carousel .card-title {
+    font-weight: 600;
+
+}
+
+.blog-featured-section .featured-carousel p span {
+    font-weight: 600;
+    font-family: 'Gill Sans';
+
+}
+
+.featured-section .main-header-section {
+    border: 1px solid #DFDFE1;
+    background-color: #fff;
+    border-radius: 5px;
+    margin-bottom: 45px;
+    padding: 15px 13px;
+}
+
+.featured-section h5.not-found {
+    margin: 0 auto;
+}
+
+#galleryRoot {
+    background: #EFEFEF;
+}
+
+#featured-image-gallery .badge-label,
+#featuredCarouselVideo .badge-label {
+    z-index: 99;
+}
+
+#featuredCarouselVideo .badge-label {
+    left: 20px;
+}
+
+.gallery-featured-section .main-content {
+    margin: 0px 0px;
+}
+
+@media (min-width:768px) {
+
+    #featured-image-gallery .col-md-3,
+    #featured-video-gallery .col-md-3 {
+        width: 95%;
+    }
+
+
+    /*#featured-video-gallery .carousel-item {
+        margin-right: 0px;
+        
+    }*/
+}
+
+@media (max-width: 767px) {
+    #featured-image-gallery {
+        padding: 0px 20px;
+    }
+
+    #featured-image-gallery .carousel-control-next,
+    #featured-video-gallery .carousel-control-next {
+        right: 0;
+        top: 0%;
+    }
+
+    #featured-image-gallery .carousel-control-prev,
+    #featured-video-gallery .carousel-control-prev {
+        left: 0;
+        top: 0%;
+    }
+
+    .gallery-featured-section .title-wrapper {
+        padding: 0px 0px;
+    }
+}
+
+
+/*#featured-image-gallery .gallery-item .gallery-item--img img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}*/
+
+/*popup custom checkbox style start*/
+.custom-chkbox {
+    color: #9D0D71;
+    accent-color: currentcolor;
+    width: 25px;
+    height: 25px;
+    vertical-align: middle;
+}
+
+/*popup custom checkbox style end*/
